fixed navbar overlap issue

--- a/web-portfolio/src/components/Home/index.scss
+++ b/web-portfolio/src/components/Home/index.scss
@@ -5,8 +5,8 @@
         left: 10%;
         top: 45%;
         transform: translateY(-50%);
-        width: 40%;
-        max-height: 90%;
+        width: 100%;
+        max-height: 80%;
         
 
         h1 {
