--- a/web-portfolio/src/components/Layout/index.scss
+++ b/web-portfolio/src/components/Layout/index.scss
@@ -1,12 +1,14 @@
 .container {
     width: 100%;
     will-change: contents;
-    height: 90%;
-    min-height: 566px;
-    position: absolute;
+    height: 50%;
+    min-height: 1100px;
+    min-width: 10px;
+    position: relative;
     opacity: 0;
-    top: 5%;
-    margin: 10px;
+    top: 50%;
+    left:  100px;
+    margin: 0px auto;
     z-index: 1;
     transform-style: preserve-3d;
     animation: fadeIn 1s forwards;
